#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])
AC_CONFIG_SRCDIR([lib/wilddog-client-c/src/wilddog_api.c])
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE(LiveShell, 1.0)

# Checks for programs.
AC_PROG_CC

AC_PROG_RANLIB

AC_ARG_WITH(endian,
	    [ --with-endian=                Specify the endian],
		AC_DEFINE_UNQUOTED([WILDDOG_LITTLE_ENDIAN],["$withval"], [des])
)
AC_SUBST(WILDDOG_LITTLE_ENDIAN)

AC_ARG_WITH(bits,
	    [ --with-bits=                Specify the machine bits],
		AC_DEFINE_UNQUOTED([WILDDOG_MACHINE_BITS],["$withval"], [des])
)
AC_SUBST(WILDDOG_MACHINE_BITS)

AC_ARG_WITH(maxsize,
	    [ --with-maxsize=                Specify the proto maxsize],
		AC_DEFINE_UNQUOTED([WILDDOG_PROTO_MAXSIZE],["$withval"], [des])
)
AC_SUBST(WILDDOG_PROTO_MAXSIZE)

AC_ARG_WITH(queuenum,
	    [ --with-queuenum=                Specify the queue num],
		AC_DEFINE_UNQUOTED([WILDDOG_REQ_QUEUE_NUM],["$withval"], [des])
)
AC_SUBST(WILDDOG_REQ_QUEUE_NUM)

AC_ARG_WITH(retransmitetime,
	    [ --with-retransmitetime=                Specify the retransmite time],
		AC_DEFINE_UNQUOTED([WILDDOG_RETRANSMITE_TIME],["$withval"], [des])
)
AC_SUBST(WILDDOG_RETRANSMITE_TIME)

AC_ARG_WITH(receivetimeout,
	    [ --with-receivetimeout=                Specify the receive timeout],
		AC_DEFINE_UNQUOTED([WILDDOG_RECEIVE_TIMEOUT],["$withval"], [des])
)
AC_SUBST(WILDDOG_RECEIVE_TIMEOUT)

#AC_ARG_WITH(wilddogport,
#	    [ --with-wilddogport=                Specify the wilddog port],
#		AC_DEFINE_UNQUOTED([WILDDOG_PORT],[$withval], [des])
#)
#AC_SUBST(WILDDOG_PORT)

AC_DEFINE([WILDDOG_PORT], [5684], [Description])

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h fcntl.h inttypes.h malloc.h netdb.h netinet/in.h stddef.h stdint.h stdlib.h string.h sys/socket.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T
AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([alarm gethostbyname gettimeofday memmove memset select socket strcasecmp strchr strstr])
AC_CONFIG_FILES([Makefile
                 lib/Makefile
                 src/Makefile])
AC_OUTPUT
