noinst_LIBRARIES=libwilddog.a
INCLUDES=-I $(top_srcdir)/../lib/wilddog-client-c/include -I $(top_srcdir)/../lib/wilddog-client-c/src -I $(top_srcdir)/../lib/wilddog-client-c/src/networking/coap -I ./wilddog-client-c/include -I ./wilddog-client-c/src -I ./wilddog-client-c/src/networking/coap

if WITHOUT_DTLS
libwilddog_a_SOURCES=./wilddog-client-c/platform/linux/wilddog_posix.c \
                     ./wilddog-client-c/src/performtest.c \
					 ./wilddog-client-c/src/ramtest.c \
					 ./wilddog-client-c/src/test_lib.h \
					 ./wilddog-client-c/src/utlist.h \
					 ./wilddog-client-c/src/wilddog_api.c \
					 ./wilddog-client-c/src/wilddog_common.c \
					 ./wilddog-client-c/src/wilddog_common.h \
					 ./wilddog-client-c/src/wilddog_conn.c \
					 ./wilddog-client-c/src/wilddog_conn.h \
					 ./wilddog-client-c/src/wilddog_ct.c \
					 ./wilddog-client-c/src/wilddog_ct.h \
					 ./wilddog-client-c/src/wilddog_debug.c \
					 ./wilddog-client-c/src/wilddog_endian.h \
					 ./wilddog-client-c/src/wilddog_event.c \
					 ./wilddog-client-c/src/wilddog_event.h \
					 ./wilddog-client-c/src/wilddog_node.c \
					 ./wilddog-client-c/src/wilddog_payload.h \
					 ./wilddog-client-c/src/wilddog_sec.h \
					 ./wilddog-client-c/src/wilddog_sec_host.c \
					 ./wilddog-client-c/src/wilddog_sec_host.h \
					 ./wilddog-client-c/src/wilddog_store.c \
					 ./wilddog-client-c/src/wilddog_store.h \
					 ./wilddog-client-c/src/wilddog_url_parser.c  \
					 ./wilddog-client-c/src/wilddog_url_parser.h \
					 ./wilddog-client-c/src/networking/coap/bits.h \
					 ./wilddog-client-c/src/networking/coap/option.c \
					 ./wilddog-client-c/src/networking/coap/option.h \
					 ./wilddog-client-c/src/networking/coap/pdu.c \
					 ./wilddog-client-c/src/networking/coap/pdu.h \
					 ./wilddog-client-c/src/networking/coap/wilddog_conn_coap.c \
					 ./wilddog-client-c/src/networking/coap/wilddog_conn_coap.h \
					 ./wilddog-client-c/src/secure/nosec/wilddog_nosec.c \
					 ./wilddog-client-c/src/serialize/cbor/wilddog_cbor.c \
					 ./wilddog-client-c/src/serialize/cbor/wilddog_cbor.h \
					 ./wilddog-client-c/include/wilddog.h \
					 ./wilddog-client-c/include/wilddog_api.h \
					 ./wilddog-client-c/include/wilddog_config.h \
					 ./wilddog-client-c/include/wilddog_debug.h \
					 ./wilddog-client-c/include/wilddog_port.h
AM_CFLAGS=-DWILDDOG_PORT=5683
else
if WITH_DTLS
INCLUDES+=-I $(top_srcdir)/../lib/src/secure/dtls/inc   -I ./wilddog-client-c/src/secure/dtls/inc
libwilddog_a_SOURCES=./wilddog-client-c/platform/linux/wilddog_posix.c \
                     ./wilddog-client-c/src/performtest.c \
					 ./wilddog-client-c/src/ramtest.c \
					 ./wilddog-client-c/src/test_lib.h \
					 ./wilddog-client-c/src/utlist.h \
					 ./wilddog-client-c/src/wilddog_api.c \
					 ./wilddog-client-c/src/wilddog_common.c \
					 ./wilddog-client-c/src/wilddog_common.h \
					 ./wilddog-client-c/src/wilddog_conn.c \
					 ./wilddog-client-c/src/wilddog_conn.h \
					 ./wilddog-client-c/src/wilddog_ct.c \
					 ./wilddog-client-c/src/wilddog_ct.h \
					 ./wilddog-client-c/src/wilddog_debug.c \
					 ./wilddog-client-c/src/wilddog_endian.h \
					 ./wilddog-client-c/src/wilddog_event.c \
					 ./wilddog-client-c/src/wilddog_event.h \
					 ./wilddog-client-c/src/wilddog_node.c \
					 ./wilddog-client-c/src/wilddog_payload.h \
					 ./wilddog-client-c/src/wilddog_sec.h \
					 ./wilddog-client-c/src/wilddog_sec_host.c \
					 ./wilddog-client-c/src/wilddog_sec_host.h \
					 ./wilddog-client-c/src/wilddog_store.c \
					 ./wilddog-client-c/src/wilddog_store.h \
					 ./wilddog-client-c/src/wilddog_url_parser.c  \
					 ./wilddog-client-c/src/wilddog_url_parser.h \
					 ./wilddog-client-c/src/networking/coap/bits.h \
					 ./wilddog-client-c/src/networking/coap/option.c \
					 ./wilddog-client-c/src/networking/coap/option.h \
					 ./wilddog-client-c/src/networking/coap/pdu.c \
					 ./wilddog-client-c/src/networking/coap/pdu.h \
					 ./wilddog-client-c/src/networking/coap/wilddog_conn_coap.c \
					 ./wilddog-client-c/src/networking/coap/wilddog_conn_coap.h  \
					 ./wilddog-client-c/src/serialize/cbor/wilddog_cbor.c \
					 ./wilddog-client-c/src/serialize/cbor/wilddog_cbor.h \
					 ./wilddog-client-c/include/wilddog.h \
					 ./wilddog-client-c/include/wilddog_api.h \
					 ./wilddog-client-c/include/wilddog_config.h \
					 ./wilddog-client-c/include/wilddog_debug.h \
					 ./wilddog-client-c/include/wilddog_port.h \
					 ./wilddog-client-c/src/secure/dtls/lib/aes.c \
					 ./wilddog-client-c/src/secure/dtls/lib/aesni.c \
					 ./wilddog-client-c/src/secure/dtls/lib/arc4.c \
					 ./wilddog-client-c/src/secure/dtls/lib/asn1parse.c \
					 ./wilddog-client-c/src/secure/dtls/lib/asn1write.c \
					 ./wilddog-client-c/src/secure/dtls/lib/base64.c \
					 ./wilddog-client-c/src/secure/dtls/lib/bignum.c \
					 ./wilddog-client-c/src/secure/dtls/lib/blowfish.c \
					 ./wilddog-client-c/src/secure/dtls/lib/camellia.c \
					 ./wilddog-client-c/src/secure/dtls/lib/ccm.c \
					 ./wilddog-client-c/src/secure/dtls/lib/certs.c \
					 ./wilddog-client-c/src/secure/dtls/lib/cipher.c \
					 ./wilddog-client-c/src/secure/dtls/lib/cipher_wrap.c \
					 ./wilddog-client-c/src/secure/dtls/lib/ctr_drbg.c \
					 ./wilddog-client-c/src/secure/dtls/lib/debug.c \
					 ./wilddog-client-c/src/secure/dtls/lib/des.c \
					 ./wilddog-client-c/src/secure/dtls/lib/dhm.c \
					 ./wilddog-client-c/src/secure/dtls/lib/ecdh.c \
					 ./wilddog-client-c/src/secure/dtls/lib/ecdsa.c \
					 ./wilddog-client-c/src/secure/dtls/lib/ecp.c \
					 ./wilddog-client-c/src/secure/dtls/lib/ecp_curves.c \
					 ./wilddog-client-c/src/secure/dtls/lib/entropy.c \
					 ./wilddog-client-c/src/secure/dtls/lib/entropy_poll.c \
					 ./wilddog-client-c/src/secure/dtls/lib/gcm.c \
					 ./wilddog-client-c/src/secure/dtls/lib/hmac_drbg.c \
					 ./wilddog-client-c/src/secure/dtls/lib/md5.c \
					 ./wilddog-client-c/src/secure/dtls/lib/md.c \
					 ./wilddog-client-c/src/secure/dtls/lib/md_wrap.c \
					 ./wilddog-client-c/src/secure/dtls/lib/net.c \
					 ./wilddog-client-c/src/secure/dtls/lib/oid.c \
					 ./wilddog-client-c/src/secure/dtls/lib/padlock.c \
					 ./wilddog-client-c/src/secure/dtls/lib/pem.c \
					 ./wilddog-client-c/src/secure/dtls/lib/pk.c \
					 ./wilddog-client-c/src/secure/dtls/lib/pkcs12.c \
					 ./wilddog-client-c/src/secure/dtls/lib/pkcs5.c \
					 ./wilddog-client-c/src/secure/dtls/lib/pkparse.c \
					 ./wilddog-client-c/src/secure/dtls/lib/pk_wrap.c \
					 ./wilddog-client-c/src/secure/dtls/lib/ripemd160.c \
					 ./wilddog-client-c/src/secure/dtls/lib/rsa.c \
					 ./wilddog-client-c/src/secure/dtls/lib/sha1.c \
					 ./wilddog-client-c/src/secure/dtls/lib/sha256.c \
					 ./wilddog-client-c/src/secure/dtls/lib/ssl_ciphersuites.c \
					 ./wilddog-client-c/src/secure/dtls/lib/ssl_cli.c \
					 ./wilddog-client-c/src/secure/dtls/lib/ssl_srv.c \
					 ./wilddog-client-c/src/secure/dtls/lib/ssl_tls.c \
					 ./wilddog-client-c/src/secure/dtls/lib/timing.c \
					 ./wilddog-client-c/src/secure/dtls/lib/wilddog_dtls.c \
					 ./wilddog-client-c/src/secure/dtls/lib/x509.c \
					 ./wilddog-client-c/src/secure/dtls/lib/x509_crt.c \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/aes.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/aesni.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/arc4.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/asn1.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/asn1write.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/base64.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/bignum.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/blowfish.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/bn_mul.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/camellia.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/ccm.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/certs.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/check_config.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/cipher.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/cipher_internal.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/compat-1.3.h \
				 	 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/config.h \
				 	 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/ctr_drbg.h \
				 	 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/debug.h \
				 	 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/des.h \
				 	 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/dhm.h \
				 	 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/ecdh.h \
				 	 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/ecdsa.h \
				 	 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/ecp.h \
				 	 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/entropy.h \
				 	 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/entropy_poll.h \
				 	 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/error.h \
				 	 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/gcm.h \
				 	 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/havege.h \
				 	 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/hmac_drbg.h \
				 	 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/md2.h \
				 	 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/md4.h \
				 	 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/md5.h \
				 	 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/md.h \
				 	 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/md_internal.h \
				 	 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/memory_buffer_alloc.h \
				 	 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/net.h \
				 	 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/oid.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/padlock.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/pem.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/pkcs11.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/pkcs12.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/pkcs5.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/pk.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/pk_internal.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/platform.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/ripemd160.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/rsa.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/sha1.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/sha256.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/sha512.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/ssl_cache.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/ssl_ciphersuites.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/ssl_cookie.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/ssl_internal.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/ssl.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/ssl_ticket.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/threading.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/timing.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/version.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/x509_crl.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/x509_crt.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/x509_csr.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/x509.h \
					 ./wilddog-client-c/src/secure/dtls/inc/mbedtls/xtea.h
AM_CFLAGS=-DWILDDOG_PORT=5684
else
libwilddog_a_SOURCES=./wilddog-client-c/platform/linux/wilddog_posix.c \
					 ./wilddog-client-c/src/performtest.c \
					 ./wilddog-client-c/src/ramtest.c \
					 ./wilddog-client-c/src/test_lib.h \
					 ./wilddog-client-c/src/utlist.h \
					 ./wilddog-client-c/src/wilddog_api.c \
					 ./wilddog-client-c/src/wilddog_common.c \
					 ./wilddog-client-c/src/wilddog_common.h \
					 ./wilddog-client-c/src/wilddog_conn.c \
					 ./wilddog-client-c/src/wilddog_conn.h \
					 ./wilddog-client-c/src/wilddog_ct.c \
					 ./wilddog-client-c/src/wilddog_ct.h \
					 ./wilddog-client-c/src/wilddog_debug.c \
					 ./wilddog-client-c/src/wilddog_endian.h \
					 ./wilddog-client-c/src/wilddog_event.c \
					 ./wilddog-client-c/src/wilddog_event.h \
					 ./wilddog-client-c/src/wilddog_node.c \
					 ./wilddog-client-c/src/wilddog_payload.h \
					 ./wilddog-client-c/src/wilddog_sec.h \
					 ./wilddog-client-c/src/wilddog_sec_host.c \
					 ./wilddog-client-c/src/wilddog_sec_host.h \
					 ./wilddog-client-c/src/wilddog_store.c \
					 ./wilddog-client-c/src/wilddog_store.h \
					 ./wilddog-client-c/src/wilddog_url_parser.c  \
					 ./wilddog-client-c/src/wilddog_url_parser.h \
					 ./wilddog-client-c/src/networking/coap/bits.h \
					 ./wilddog-client-c/src/networking/coap/option.c \
					 ./wilddog-client-c/src/networking/coap/option.h \
					 ./wilddog-client-c/src/networking/coap/pdu.c \
					 ./wilddog-client-c/src/networking/coap/pdu.h \
					 ./wilddog-client-c/src/networking/coap/wilddog_conn_coap.c \
					 ./wilddog-client-c/src/networking/coap/wilddog_conn_coap.h \
					 ./wilddog-client-c/src/secure/tinydtls/alert.h \
					 ./wilddog-client-c/src/secure/tinydtls/tiny_ccm.c \
					 ./wilddog-client-c/src/secure/tinydtls/ccm.h \
					 ./wilddog-client-c/src/secure/tinydtls/crypto.c \
					 ./wilddog-client-c/src/secure/tinydtls/crypto.h \
					 ./wilddog-client-c/src/secure/tinydtls/tiny_debug.c \
					 ./wilddog-client-c/src/secure/tinydtls/debug.h \
					 ./wilddog-client-c/src/secure/tinydtls/dtls.c \
					 ./wilddog-client-c/src/secure/tinydtls/dtls.h \
					 ./wilddog-client-c/src/secure/tinydtls/dtls_config.h \
					 ./wilddog-client-c/src/secure/tinydtls/dtls_time.c \
					 ./wilddog-client-c/src/secure/tinydtls/dtls_time.h \
					 ./wilddog-client-c/src/secure/tinydtls/ecc.c \
					 ./wilddog-client-c/src/secure/tinydtls/ecc.h \
					 ./wilddog-client-c/src/secure/tinydtls/global.h \
					 ./wilddog-client-c/src/secure/tinydtls/hmac.c \
					 ./wilddog-client-c/src/secure/tinydtls/hmac.h \
					 ./wilddog-client-c/src/secure/tinydtls/netq.c \
					 ./wilddog-client-c/src/secure/tinydtls/netq.h \
					 ./wilddog-client-c/src/secure/tinydtls/numeric.h \
					 ./wilddog-client-c/src/secure/tinydtls/peer.c \
					 ./wilddog-client-c/src/secure/tinydtls/peer.h \
					 ./wilddog-client-c/src/secure/tinydtls/prng.h \
					 ./wilddog-client-c/src/secure/tinydtls/rijndael.c \
					 ./wilddog-client-c/src/secure/tinydtls/rijndael.h \
					 ./wilddog-client-c/src/secure/tinydtls/session.c \
					 ./wilddog-client-c/src/secure/tinydtls/session.h \
					 ./wilddog-client-c/src/secure/tinydtls/sha2.c \
					 ./wilddog-client-c/src/secure/tinydtls/sha2.h \
					 ./wilddog-client-c/src/secure/tinydtls/state.h \
					 ./wilddog-client-c/src/secure/tinydtls/t_list.h \
					 ./wilddog-client-c/src/secure/tinydtls/tiny_platform.h \
					 ./wilddog-client-c/src/secure/tinydtls/tinydtls.h \
					 ./wilddog-client-c/src/secure/tinydtls/uthash.h \
					 ./wilddog-client-c/src/secure/tinydtls/utlist.h \
					 ./wilddog-client-c/src/secure/tinydtls/wilddog_conn_sec_dtls.c \
					 ./wilddog-client-c/src/serialize/cbor/wilddog_cbor.c \
					 ./wilddog-client-c/src/serialize/cbor/wilddog_cbor.h \
					 ./wilddog-client-c/include/wilddog.h \
					 ./wilddog-client-c/include/wilddog_api.h \
					 ./wilddog-client-c/include/wilddog_config.h \
					 ./wilddog-client-c/include/wilddog_debug.h \
					 ./wilddog-client-c/include/wilddog_port.h
AM_CFLAGS=-DWILDDOG_PORT=5684 -fno-strict-aliasing
endif
endif
