noinst_LIBRARIES=libwilddog.a
INCLUDES=-I $(top_srcdir)/../lib/wilddog-client-c/include -I $(top_srcdir)/../lib/wilddog-client-c/src -I $(top_srcdir)/../lib/wilddog-client-c/src/networking/coap -I ./wilddog-client-c/include -I ./wilddog-client-c/src -I ./wilddog-client-c/src/networking/coap
AM_CFLAGS=
libwilddog_a_SOURCES= \
	./wilddog-client-c/platform/linux/wilddog_posix.c \
	./wilddog-client-c/src/performtest.c \
	./wilddog-client-c/src/ramtest.c \
	./wilddog-client-c/src/test_lib.h \
	./wilddog-client-c/src/utlist.h \
	./wilddog-client-c/src/wilddog_api.c \
	./wilddog-client-c/src/wilddog_common.c \
	./wilddog-client-c/src/wilddog_common.h \
	./wilddog-client-c/src/wilddog_conn_manage.c \
	./wilddog-client-c/src/wilddog_conn_manage.h \
	./wilddog-client-c/src/wilddog_conn.c \
	./wilddog-client-c/src/wilddog_conn.h \
	./wilddog-client-c/src/wilddog_ct.c \
	./wilddog-client-c/src/wilddog_ct.h \
	./wilddog-client-c/src/wilddog_debug.c \
	./wilddog-client-c/src/wilddog_endian.h \
	./wilddog-client-c/src/wilddog_event.c \
	./wilddog-client-c/src/wilddog_event.h \
	./wilddog-client-c/src/wilddog_node.c \
	./wilddog-client-c/src/wilddog_payload.h \
	./wilddog-client-c/src/wilddog_sec.h \
	./wilddog-client-c/src/wilddog_sec_host.c \
	./wilddog-client-c/src/wilddog_sec_host.h \
	./wilddog-client-c/src/wilddog_store.c \
	./wilddog-client-c/src/wilddog_store.h \
	./wilddog-client-c/src/wilddog_url_parser.c \
	./wilddog-client-c/src/wilddog_url_parser.h \
	./wilddog-client-c/src/networking/coap/bits.h \
	./wilddog-client-c/src/networking/coap/option.c \
	./wilddog-client-c/src/networking/coap/option.h \
	./wilddog-client-c/src/networking/coap/pdu.c \
	./wilddog-client-c/src/networking/coap/pdu.h \
	./wilddog-client-c/src/networking/coap/wilddog_conn_coap.c \
	./wilddog-client-c/src/networking/coap/wilddog_conn_coap.h \
	./wilddog-client-c/src/serialize/cbor/wilddog_cbor.c \
	./wilddog-client-c/src/serialize/cbor/wilddog_cbor.h \
	./wilddog-client-c/include/wilddog.h \
	./wilddog-client-c/include/wilddog_api.h \
	./wilddog-client-c/include/wilddog_config.h \
	./wilddog-client-c/include/wilddog_debug.h \
	./wilddog-client-c/include/wilddog_port.h 
	
if WITHOUT_DTLS
libwilddog_a_SOURCES += \
	./wilddog-client-c/src/secure/nosec/wilddog_nosec.c 

AM_CFLAGS+=-DWILDDOG_PORT=5683
else
if WITH_MBEDTLS
INCLUDES+=-I $(top_srcdir)/../lib/src/secure/mbedtls/inc   -I ./wilddog-client-c/src/secure/mbedtls/inc
libwilddog_a_SOURCES += \
	./wilddog-client-c/src/secure/mbedtls/lib/aes.c \
	./wilddog-client-c/src/secure/mbedtls/lib/aesni.c \
	./wilddog-client-c/src/secure/mbedtls/lib/arc4.c \
	./wilddog-client-c/src/secure/mbedtls/lib/asn1parse.c \
	./wilddog-client-c/src/secure/mbedtls/lib/asn1write.c \
	./wilddog-client-c/src/secure/mbedtls/lib/base64.c \
	./wilddog-client-c/src/secure/mbedtls/lib/bignum.c \
	./wilddog-client-c/src/secure/mbedtls/lib/blowfish.c \
	./wilddog-client-c/src/secure/mbedtls/lib/camellia.c \
	./wilddog-client-c/src/secure/mbedtls/lib/ccm.c \
	./wilddog-client-c/src/secure/mbedtls/lib/certs.c \
	./wilddog-client-c/src/secure/mbedtls/lib/cipher.c \
	./wilddog-client-c/src/secure/mbedtls/lib/cipher_wrap.c \
	./wilddog-client-c/src/secure/mbedtls/lib/ctr_drbg.c \
	./wilddog-client-c/src/secure/mbedtls/lib/debug.c \
	./wilddog-client-c/src/secure/mbedtls/lib/des.c \
	./wilddog-client-c/src/secure/mbedtls/lib/dhm.c \
	./wilddog-client-c/src/secure/mbedtls/lib/ecdh.c \
	./wilddog-client-c/src/secure/mbedtls/lib/ecdsa.c \
	./wilddog-client-c/src/secure/mbedtls/lib/ecp.c \
	./wilddog-client-c/src/secure/mbedtls/lib/ecp_curves.c \
	./wilddog-client-c/src/secure/mbedtls/lib/entropy.c \
	./wilddog-client-c/src/secure/mbedtls/lib/entropy_poll.c \
	./wilddog-client-c/src/secure/mbedtls/lib/gcm.c \
	./wilddog-client-c/src/secure/mbedtls/lib/hmac_drbg.c \
	./wilddog-client-c/src/secure/mbedtls/lib/md5.c \
	./wilddog-client-c/src/secure/mbedtls/lib/md.c \
	./wilddog-client-c/src/secure/mbedtls/lib/md_wrap.c \
	./wilddog-client-c/src/secure/mbedtls/lib/net.c \
	./wilddog-client-c/src/secure/mbedtls/lib/oid.c \
	./wilddog-client-c/src/secure/mbedtls/lib/padlock.c \
	./wilddog-client-c/src/secure/mbedtls/lib/pem.c \
	./wilddog-client-c/src/secure/mbedtls/lib/pk.c \
	./wilddog-client-c/src/secure/mbedtls/lib/pkcs12.c \
	./wilddog-client-c/src/secure/mbedtls/lib/pkcs5.c \
	./wilddog-client-c/src/secure/mbedtls/lib/pkparse.c \
	./wilddog-client-c/src/secure/mbedtls/lib/pk_wrap.c \
	./wilddog-client-c/src/secure/mbedtls/lib/ripemd160.c \
	./wilddog-client-c/src/secure/mbedtls/lib/rsa.c \
	./wilddog-client-c/src/secure/mbedtls/lib/sha1.c \
	./wilddog-client-c/src/secure/mbedtls/lib/sha256.c \
	./wilddog-client-c/src/secure/mbedtls/lib/ssl_ciphersuites.c \
	./wilddog-client-c/src/secure/mbedtls/lib/ssl_cli.c \
	./wilddog-client-c/src/secure/mbedtls/lib/ssl_srv.c \
	./wilddog-client-c/src/secure/mbedtls/lib/ssl_tls.c \
	./wilddog-client-c/src/secure/mbedtls/lib/timing.c \
	./wilddog-client-c/src/secure/mbedtls/lib/wilddog_dtls.c \
	./wilddog-client-c/src/secure/mbedtls/lib/x509.c \
	./wilddog-client-c/src/secure/mbedtls/lib/x509_crt.c \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/aes.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/aesni.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/arc4.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/asn1.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/asn1write.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/base64.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/bignum.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/blowfish.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/bn_mul.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/camellia.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/ccm.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/certs.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/check_config.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/cipher.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/cipher_internal.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/compat-1.3.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/config.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/ctr_drbg.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/debug.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/des.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/dhm.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/ecdh.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/ecdsa.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/ecp.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/entropy.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/entropy_poll.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/error.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/gcm.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/havege.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/hmac_drbg.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/md2.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/md4.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/md5.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/md.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/md_internal.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/memory_buffer_alloc.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/net.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/oid.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/padlock.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/pem.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/pkcs11.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/pkcs12.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/pkcs5.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/pk.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/pk_internal.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/platform.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/ripemd160.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/rsa.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/sha1.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/sha256.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/sha512.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/ssl_cache.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/ssl_ciphersuites.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/ssl_cookie.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/ssl_internal.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/ssl.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/ssl_ticket.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/threading.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/timing.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/version.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/x509_crl.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/x509_crt.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/x509_csr.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/x509.h \
	./wilddog-client-c/src/secure/mbedtls/inc/mbedtls/xtea.h
AM_CFLAGS+=-DWILDDOG_PORT=5684
else
libwilddog_a_SOURCES+= \
	./wilddog-client-c/src/secure/tinydtls/alert.h \
	./wilddog-client-c/src/secure/tinydtls/tiny_ccm.c \
	./wilddog-client-c/src/secure/tinydtls/ccm.h \
	./wilddog-client-c/src/secure/tinydtls/crypto.c \
	./wilddog-client-c/src/secure/tinydtls/crypto.h \
	./wilddog-client-c/src/secure/tinydtls/tiny_debug.c \
	./wilddog-client-c/src/secure/tinydtls/debug.h \
	./wilddog-client-c/src/secure/tinydtls/dtls.c \
	./wilddog-client-c/src/secure/tinydtls/dtls.h \
	./wilddog-client-c/src/secure/tinydtls/dtls_config.h \
	./wilddog-client-c/src/secure/tinydtls/dtls_time.c \
	./wilddog-client-c/src/secure/tinydtls/dtls_time.h \
	./wilddog-client-c/src/secure/tinydtls/ecc.c \
	./wilddog-client-c/src/secure/tinydtls/ecc.h \
	./wilddog-client-c/src/secure/tinydtls/global.h \
	./wilddog-client-c/src/secure/tinydtls/hmac.c \
	./wilddog-client-c/src/secure/tinydtls/hmac.h \
	./wilddog-client-c/src/secure/tinydtls/netq.c \
	./wilddog-client-c/src/secure/tinydtls/netq.h \
	./wilddog-client-c/src/secure/tinydtls/numeric.h \
	./wilddog-client-c/src/secure/tinydtls/peer.c \
	./wilddog-client-c/src/secure/tinydtls/peer.h \
	./wilddog-client-c/src/secure/tinydtls/prng.h \
	./wilddog-client-c/src/secure/tinydtls/rijndael.c \
	./wilddog-client-c/src/secure/tinydtls/rijndael.h \
	./wilddog-client-c/src/secure/tinydtls/session.c \
	./wilddog-client-c/src/secure/tinydtls/session.h \
	./wilddog-client-c/src/secure/tinydtls/sha2.c \
	./wilddog-client-c/src/secure/tinydtls/sha2.h \
	./wilddog-client-c/src/secure/tinydtls/state.h \
	./wilddog-client-c/src/secure/tinydtls/t_list.h \
	./wilddog-client-c/src/secure/tinydtls/tiny_platform.h \
	./wilddog-client-c/src/secure/tinydtls/tinydtls.h \
	./wilddog-client-c/src/secure/tinydtls/uthash.h \
	./wilddog-client-c/src/secure/tinydtls/utlist.h \
	./wilddog-client-c/src/secure/tinydtls/wilddog_conn_sec_dtls.c \
	./wilddog-client-c/src/serialize/cbor/wilddog_cbor.c \
	./wilddog-client-c/src/serialize/cbor/wilddog_cbor.h \
	./wilddog-client-c/include/wilddog.h \
	./wilddog-client-c/include/wilddog_api.h \
	./wilddog-client-c/include/wilddog_config.h \
	./wilddog-client-c/include/wilddog_debug.h \
	./wilddog-client-c/include/wilddog_port.h
AM_CFLAGS+=-DWILDDOG_PORT=5684 -fno-strict-aliasing
endif
endif
